Add crafting table textures and sword handle item and recipes

--- a/src/main/resources/assets/my_first_mod/lang/en_us.json
+++ b/src/main/resources/assets/my_first_mod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.my_first_mod.item_diamond_quartz": "Item Diamond Quartz",
+  "item.my_first_mod.item_handle": "Sword Handle",
   "block.my_first_mod.devine_crafting_table": "Devine Crafting Table"
 }
